--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
     <header class="header">
-        <a href="#home" class="logo">Portfolio <!-- isko dekhnsa padega -->
-            <span>Jain</span></a>
+        <a href="#home" class="logo">Port <!-- isko dekhnsa padega -->
+            <span></span></a>
         <i class='bx bx-menu' id="menu-icon"></i>
 
 
@@ -34,7 +34,7 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, It's <span> Ankur</span></h1>
+            <h1>Hi, It's <span> Ankur</span></h1>folio
             <h3 class="text-animation">I'm a Learner </h3>
             <p>I am Ankur Jain a third year student and currently pursing Bachelor of Technology  in Computer Science from Teerthankar Mahaveer University Moradabad (U.P)</p>
             <div class="social-icons">
