--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
 <body>
     <header class="header">
-        <a href="#home" class="logo">Port <!-- isko dekhnsa padega -->
-            <span></span></a>
+        <a href="#home" class="logo">Port<!-- isko dekhnsa padega --><span>folio</span></a>
         <i class='bx bx-menu' id="menu-icon"></i>
 
 
