--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hi, It's <span> Ankur</span></h1>folio
+            <h1>Hi, It's <span> Ankur</span></h1>
             <h3 class="text-animation">I'm a Learner </h3>
             <p>I am Ankur Jain a third year student and currently pursing Bachelor of Technology  in Computer Science from Teerthankar Mahaveer University Moradabad (U.P)</p>
             <div class="social-icons">
