--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
             <h3 class="text-animation">I'm a Learner </h3>
             <p>I am Ankur Jain a third year student and currently pursing Bachelor of Technology  in Computer Science from Teerthankar Mahaveer University Moradabad (U.P)</p>
             <div class="social-icons">
-                <a href="www.linkedin.com/in/
-                ankur-jain-394b3622a
-                "><i class='bx bxl-linkedin-square'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/ankur-jain-394b3622a/"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/Ankurjaincse01"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/ankur_jain_25/?next=%2F"><i class='bx bxl-instagram'></i></a>
 
             </div>
 
