--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="section-box">
                 <i class='bx bx-book-reader service-icon'  ></i>
                 <h3>Bookshala</h3>
-                <p>Bookshala is an online platform designed to facilitate the buying and selling of second-hand books. The website provides users with an easy-to-use interface to browse, search, and purchase books at affordable prices, promoting the reuse and recycling of books.</p>
+                <p>Bookshala is an online platform designed to facilitate the buying and selling of second-hand books. The website provides users with an easy-to-use interface to browse, search and purchase books at affordable prices.</p>
             </div>
 
 
@@ -352,7 +352,7 @@
 
             <div class="section-box">
                 <h3>Web Developnment </h3>
-                <p> As part of my Diploma studies, I have completed a Training Program Consists of HTML , CSS & Bootstrap5 .
+                <p> As part of my Diploma studies, I have completed a Training Program Consists of HTML,CSS & Bootstrap5 .
                     From The Holy faith education and welfare foundation in 15 days and learn some new Technology .
 
                     </p>
@@ -370,7 +370,7 @@
             <div class="section-box">
 
                 <h3>Achivements & Skill </h3>
-                <p>In Hacker Rank I got the 5 Star coding Rank & In Leet code solved the +25 question .My experience in group projects has my ability to contribute ideas, support and ensure tasks are completed efficiently.</p>
+                <p>In Hacker Rank I got the 5 Star coding Rank & In Leet code solved the +25 question . My experience in group projects has my ability to contribute ideas , support and ensure tasks are completed efficiently in systematic way.</p>
             </div>
         </div>
 
