--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- about section  -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="pp.jpg" alt="">
+            <img src="ja.jpg" alt="">
         </div>
         <div class="about-content">
             <h2 class="headin">
