--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2020</div>
+                <div class="timeline-date">2019-20</div>
                 <div class="timeline-content">
                     <h3>10th Record </h3>
                     <p>Goverment School of Excellence.Chhindwara (M.P) <br>
