--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="timeline-date">2019-20</div>
                 <div class="timeline-content">
                     <h3>10th Record </h3>
-                    <p>Goverment School of Excellence.Chhindwara (M.P) <br>
+                    <p>Goverment School of Excellence, Chhindwara (M.P) <br>
                     CGPA : 86%</p>
                 </div>
             </div>
