--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <a href="#home" class="logo">Port<!-- isko dekhnsa padega --><span>folio</span></a>
+        <a href="#home" class="logo">Ankur<!-- isko dekhnsa padega --><span>Jain</span></a>
         <i class='bx bx-menu' id="menu-icon"></i>
 
 
@@ -100,7 +100,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2019-20</div>
+                <div class="timeline-date"></div>
                 <div class="timeline-content">
                     <h3>10th Record </h3>
                     <p>Goverment School of Excellence, Chhindwara (M.P) <br>
