--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <div class="btn-group">
                 <a href="#" class="btn">Hire me</a>
-                <a href="ankur_resume.pdf" class="btn">Resume</a>
+                <a href="Ankur_new_resume.pdf" class="btn">Resume</a>
             </div>
         </div>
         <div class="home-img">
